--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="first">
         <div class="box"></div>
         <nav class="netflix">
-            <span> <img width="120" src="images/netflix.png" alt=""></span>
+            <span> <img width="120" src="netflix.png" alt=""></span>
             <div>
                 <button>ENGLISH </button>
                 <button class="sign" > Sign in</button>
